{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 560,
  "lineage": "9a16507b-5bd0-b47e-a543-7f319a646a8e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399695879:security-group/sg-08d8e762a9a92ec6c",
            "description": "Allows traffic through the application load balance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d8e762a9a92ec6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows HTTP traffic to load balance",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows HTTPs traffic to load balance",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "chatapp-server-default-alb-sg",
            "name_prefix": "",
            "owner_id": "182399695879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatapp-server-default-alb-sg",
              "Owner": "manikandan",
              "Project": "chatapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatapp-server-default-alb-sg",
              "Owner": "manikandan",
              "Project": "chatapp-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0432500f635866053"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autoscaling_group_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399695879:security-group/sg-03d0a2454efe6d1f2",
            "description": "Allows internet access for instances launched with ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d0a2454efe6d1f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allows HTTPS traffic into webserver",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d8e762a9a92ec6c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allows HTTPS traffic into webserver",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d8e762a9a92ec6c"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allows access to webserver through ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d8e762a9a92ec6c"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "Allows access to webserver through bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b34288eaa6f9911"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "chatapp-server-default-autoscaling-group-sg",
            "name_prefix": "",
            "owner_id": "182399695879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatapp-server-default-autoscaling-group-sg",
              "Owner": "manikandan",
              "Project": "chatapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatapp-server-default-autoscaling-group-sg",
              "Owner": "manikandan",
              "Project": "chatapp-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0432500f635866053"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_host_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399695879:security-group/sg-00b34288eaa6f9911",
            "description": "Allows SSH into bastion host instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b34288eaa6f9911",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows SSH into bastion host instance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "chatapp-server-default-bastion-host-sg",
            "name_prefix": "",
            "owner_id": "182399695879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatapp-server-default-bastion-host-sg",
              "Owner": "manikandan",
              "Project": "chatapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatapp-server-default-bastion-host-sg",
              "Owner": "manikandan",
              "Project": "chatapp-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0432500f635866053"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399695879:subnet/subnet-0296e0f07dae5e318",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0296e0f07dae5e318",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182399695879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatapp-server-default-private-1a",
              "Owner": "manikandan",
              "Project": "chatapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatapp-server-default-private-1a",
              "Owner": "manikandan",
              "Project": "chatapp-server"
            },
            "vpc_id": "vpc-0432500f635866053"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:182399695879:vpc/vpc-0432500f635866053",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08bcc3b8e486e53d2",
            "default_route_table_id": "rtb-03de47004ba3920b9",
            "default_security_group_id": "sg-088d16d31e3b12699",
            "dhcp_options_id": "dopt-092c49f0eeefd1ee7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0432500f635866053",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03de47004ba3920b9",
            "owner_id": "182399695879",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatapp-server-default",
              "Owner": "manikandan",
              "Project": "chatapp-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatapp-server-default",
              "Owner": "manikandan",
              "Project": "chatapp-server"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}